--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,14 +15,14 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "helmet": "^5.0.2",
-    "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.4",
-    "sequelize": "^6.19.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "sequelize": "^6.37.3",
     "sqlite3": "^5.0.5",
     "swagger-ui-express": "^4.3.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^3.1.4"
   }
 }
